--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -166,4 +166,4 @@ section p {
   padding: 3px;
   //@include border-top-radius(3px);
   //background: #2b3037;
-}
+} //= require foundation_and_overrides
