--- a/app/views/pages/_content.html.slim
+++ b/app/views/pages/_content.html.slim
@@ -5,7 +5,7 @@
 
       - if @page
         - if @page.show_title
-          h3 = @page.menu_title
+          h3 = @page.title
         p = @page.body.html_safe
 
 
