--- a/app/views/layouts/_info.html.slim
+++ b/app/views/layouts/_info.html.slim
@@ -1,16 +1,20 @@
 .large-7.columns
-  small г. Москва, ул. Большие Каменщики, д. 1, оф.518 <br/> м. Таганская (радиальная) <br/>Время работы: Пн - Пт, с 9:30 до 18:00
+  small г.Москва, Бережковская набережная, дом 12, подъезд 17. Метро Киевская
   div
     small
       a href=url_for(page_path(@contact))
         i.icon-envelope-alt  Контакты
+      span
+        |  |
+        a href='mailto:kalsinpv@mail.ru'  kalsinpv@mail.ru
+
 .large-5.columns
   .centred
     h4
       small
         i
-        | +7 (495)
-      |  778-42-51
+        | +7 (499)
+      |  240-27-36
   .centred
     a href='#'
       i.icon-phone  Перезвоните мне
