--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -167,3 +167,9 @@ section p {
   //@include border-top-radius(3px);
   //background: #2b3037;
 } //= require foundation_and_overrides
+
+#reception {
+  select {
+    width: auto;
+  }
+}
