--- a/app/views/pages/_content.html.slim
+++ b/app/views/pages/_content.html.slim
@@ -12,10 +12,11 @@
   .large-4.columns
     .right_side
       .block_right.centred
-        a href='#'
+        a href='#' data-reveal-id='reception'
           = image_tag "pero.png"
         div
-          a.zapis href='#' Записаться на прием
+          a.zapis href='#' data-reveal-id='reception' Записаться на прием
+
 
 
       .block_right
@@ -36,3 +37,7 @@
           li
             a href='#'
               i.icon-double-angle-right  Исполнение решения суда
+
+
+#reception.reveal-modal
+  = render 'receptions/form'
