--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -168,7 +168,7 @@ section p {
   //background: #2b3037;
 } //= require foundation_and_overrides
 
-#reception {
+#reception, #call {
   select {
     width: auto;
   }
