--- a/app/views/layouts/_info.html.slim
+++ b/app/views/layouts/_info.html.slim
@@ -16,5 +16,5 @@
         | +7 (499)
       |  240-27-36
   .centred
-    a href='#'
+    a href='#' data-reveal-id='call'
       i.icon-phone  Перезвоните мне
