--- a/app/views/receptions/_form.html.slim
+++ b/app/views/receptions/_form.html.slim
@@ -7,13 +7,10 @@ p.lead Заполните, пожалуйста, данную форму. Наш
     = f.label 'Контактный телефон или e-mail *:'
     = f.text_field :contact
     = f.label 'Желаемые дата и время визита*:'
-    = f.datetime_select :rtime, class: 'inline'
+    = f.datetime_select :rtime
+    p
     = f.label 'Цель визита:'
     = f.text_area :body
     p * - звездочкой обозначены обязательные для заполнения поля
     = f.submit 'Отправить'
-  /- form_tag({controller: "receptions", action: "create"}) do |f|
-    = label_tag 'Ваше имя:'
-    = text_field_tag :name
-    = submit_tag 'Отправить'
 a.close-reveal-modal &#215;
