--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -1,7 +1,7 @@
 .head
     .row
         .logo.large-5.columns
-            a href='#'
+            a href='#{root_url}'
                 = image_tag("logo.png", alt: 'Консалтинговая группа «ПРАВО»')
         .info.large-7.columns
             = render 'layouts/info'
