--- a/app/views/pages/_content.html.slim
+++ b/app/views/pages/_content.html.slim
@@ -35,20 +35,13 @@
         h6.subheader Актуальные услуги:
         ul.no-bullet
           li
-            a href='#'
-              i.icon-double-angle-right  Продажа доли в ООО
+            i.icon-double-angle-right  Взысание задолженности
           li
-            a href='#'
-              i.icon-double-angle-right  Внесение изменений в ЕГРЮЛ
+            i.icon-double-angle-right  Страховые выплаты
           li
-            a href='#'
-              i.icon-double-angle-right  Внесение изменений в устав
+            i.icon-double-angle-right  Срочный выезд адвоката
           li
-            a href='#'
-              i.icon-double-angle-right  Взыскание долга по исполнительному листу
-          li
-            a href='#'
-              i.icon-double-angle-right  Исполнение решения суда
+            i.icon-double-angle-right  Снятие с регистрационного учета (выписка)
 
 
 #reception.reveal-modal
