--- a/app/views/layouts/_info.html.slim
+++ b/app/views/layouts/_info.html.slim
@@ -6,7 +6,7 @@
         i.icon-envelope-alt  Контакты
       span
         |  |
-        a href='mailto:kalsinpv@mail.ru'  kalsinpv@mail.ru
+        a href='mailto:info@kg-pravo.ru'  info@kg-pravo.ru
 
 .large-5.columns
   .centred
